--- a/package.json
+++ b/package.json
@@ -14,6 +14,12 @@
   },
   "homepage": "https://github.com/jonahbgoode/react-playground#readme",
   "dependencies": {
-    "react": "^15.6.1"
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1"
+  },
+  "devDependencies": {
+    "@types/react": "^15.0.34",
+    "@types/react-dom": "^15.5.1",
+    "awesome-typescript-loader": "^3.2.1"
   }
 }
