--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "webpack-dev-server"
   },
   "repository": "git+https://github.com/jonahbgoode/react-playground.git",
   "author": "",
@@ -21,6 +21,7 @@
     "@types/react": "^15.0.34",
     "@types/react-dom": "^15.5.1",
     "awesome-typescript-loader": "^3.2.1",
+    "typescript": "^2.4.1",
     "webpack": "^3.0.0",
     "webpack-dev-server": "^2.5.0"
   }
