--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,11 +7,12 @@
     "target": "es5",
     "jsx": "react",
     "typeRoots": [
-      "./node_modules/@types",
-      "./src/common/declarations"
+      "./node_modules/@types"
     ]
   },
-  "files": [ "node_modules/typescript/lib/typescriptServices.d.ts" ],
+  "files": [
+    "node_modules/typescript/lib/typescriptServices.d.ts"
+  ],
   "exclude": [
     "/node_modules/",
     "**/*.test.ts",
@@ -19,3 +20,4 @@
     "**/*.test.mocha.ts",
     "**/*.test.mocha.tsx"
   ]
+}
