--- a/package.json
+++ b/package.json
@@ -20,7 +20,15 @@
   "devDependencies": {
     "@types/react": "^15.0.34",
     "@types/react-dom": "^15.5.1",
+    "autoprefixer": "^7.1.1",
     "awesome-typescript-loader": "^3.2.1",
+    "css-loader": "^0.28.4",
+    "extract-text-webpack-plugin": "^2.1.2",
+    "node-sass": "^4.5.3",
+    "postcss-loader": "^2.0.6",
+    "postcss-object-fit-images": "^1.1.2",
+    "sass-loader": "^6.0.6",
+    "style-loader": "^0.18.2",
     "typescript": "^2.4.1",
     "webpack": "^3.0.0",
     "webpack-dev-server": "^2.5.0"
