--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
   "homepage": "https://github.com/jonahbgoode/react-playground#readme",
   "dependencies": {
     "react": "^15.6.1",
+    "react-addons-css-transition-group": "^15.6.0",
     "react-dom": "^15.6.1"
   },
   "devDependencies": {
     "@types/react": "^15.0.34",
+    "@types/react-addons-css-transition-group": "^15.0.3",
     "@types/react-dom": "^15.5.1",
     "autoprefixer": "^7.1.1",
     "awesome-typescript-loader": "^3.2.1",
