Demo for bootstrap

--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
   },
   "homepage": "https://github.com/jonahbgoode/react-playground#readme",
   "dependencies": {
+    "fade-props": "^1.0.0",
     "react": "^15.6.1",
     "react-addons-css-transition-group": "^15.6.0",
-    "react-dom": "^15.6.1"
+    "react-css-transition-replace": "^2.2.1",
+    "react-dom": "^15.6.1",
+    "react-easy-transition": "^1.2.4"
   },
   "devDependencies": {
     "@types/react": "^15.0.34",
