--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
   },
   "homepage": "https://github.com/jonahbgoode/react-playground#readme",
   "dependencies": {
+    "@types/react-bootstrap": "^0.0.52",
     "fade-props": "^1.0.0",
     "react": "^15.6.1",
     "react-addons-css-transition-group": "^15.6.0",
+    "react-bootstrap": "^0.31.1",
     "react-css-transition-replace": "^2.2.1",
     "react-dom": "^15.6.1",
     "react-easy-transition": "^1.2.4"
