--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,12 +2,16 @@
   "compilerOptions": {
     "outDir": "./dist/",
     "sourceMap": true,
-    "noImplicitAny": false,
+    "noImplicitAny": true,
     "module": "commonjs",
     "target": "es5",
     "jsx": "react",
     "typeRoots": [
-      "./node_modules/@types"
+      "./node_modules/@types",
+      "./src/declarations"
+    ],
+    "types": [
+      "nuka-carousel"
     ]
   },
   "files": [
