--- a/package.json
+++ b/package.json
@@ -14,28 +14,23 @@
   },
   "homepage": "https://github.com/jonahbgoode/react-playground#readme",
   "dependencies": {
-    "@types/react-bootstrap": "^0.0.52",
-    "fade-props": "^1.0.0",
-    "nuka-carousel": "^3.0.1",
-    "react": "^15.6.1",
-    "react-addons-css-transition-group": "^15.6.0",
-    "react-dom": "^15.6.1"
+    "react": "^16.3.0",
+    "react-dom": "16.3.0"
   },
   "devDependencies": {
-    "@types/react": "^15.0.34",
-    "@types/react-addons-css-transition-group": "^15.0.3",
-    "@types/react-dom": "^15.5.1",
-    "autoprefixer": "^7.1.1",
-    "awesome-typescript-loader": "^3.2.1",
-    "css-loader": "^0.28.4",
-    "extract-text-webpack-plugin": "^2.1.2",
-    "node-sass": "^4.5.3",
-    "postcss-loader": "^2.0.6",
+    "@types/react": "^16.3.1",
+    "@types/react-dom": "^16.0.4",
+    "autoprefixer": "^8.2.0",
+    "awesome-typescript-loader": "^4.0.1",
+    "css-loader": "^0.28.11",
+    "extract-text-webpack-plugin": "^3.0.0",
+    "node-sass": "^4.8.3",
+    "postcss-loader": "^2.1.3",
     "postcss-object-fit-images": "^1.1.2",
-    "sass-loader": "^6.0.6",
-    "style-loader": "^0.18.2",
-    "typescript": "^2.4.1",
-    "webpack": "^3.0.0",
-    "webpack-dev-server": "^2.5.0"
+    "sass-loader": "^6.0.7",
+    "style-loader": "^0.20.3",
+    "typescript": "2.7.2",
+    "webpack": "3.1.0",
+    "webpack-dev-server": "2.9.0"
   }
 }
