--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "style-loader": "^0.20.3",
     "typescript": "2.7.2",
     "webpack": "3.1.0",
-    "webpack-dev-server": "2.9.0"
+    "webpack-dev-server": "2.9.0",
+    "workbox-webpack-plugin": "^3.4.1"
   }
 }
